--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ nav {
   margin-bottom: 15px;
 }
 
-/* ====== ปุ่มลิงก์ไป GitHub ====== */
+/* ====== code ปุ่มลิงก์ไป GitHub ====== */
 .code-button {
   display: inline-block;
   padding: 12px 24px;
@@ -254,6 +254,39 @@ nav {
   background-color: #dc87e9;    /* สีน้ำเงินตอน hover */
   box-shadow: 0 0 10px #db47eb; /* เพิ่มเรืองแสงนิดๆ */
   transform: translateY(-2px);  /* ขยับขึ้นเล็กน้อย */
+}
+
+/* ====== Poster Section Style ====== */
+#poster {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#poster-heading {
+  font-size: 1.8rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+/* ====== ปุ่มลิงก์ไป Poster ====== */
+.poster-button {
+  display: inline-block;
+  padding: 12px 24px;
+  background-color: #2c3e50;    /* สีพื้นหลังเทา-น้ำเงินเข้ม */
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 8px;
+  font-family: "Courier New", monospace;
+  font-size: 1rem;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+/* ====== เอฟเฟกต์เมื่อเอาเมาส์วาง ====== */
+.poster-button:hover {
+  background-color: #fb64c8;    /* สีน้ำเงินสดตอน hover */
+  box-shadow: 0 0 10px #ff59e9;
+  transform: translateY(-2px);
 }
 
 /* Member */
